--- a/chatgpt/chat_gpt.ipynb
+++ b/chatgpt/chat_gpt.ipynb
@@ -96,13 +96,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 56,
    "id": "fe835962-2db1-4c56-bdf4-50708fedaad7",
    "metadata": {},
    "outputs": [],
    "source": [
     "# parsing\n",
-    "def parse_qa(level_parse, plot_level, qa, j, types):\n",
+    "def parse_qa(level_parse, plot_level, qa, j, types, \n",
+    "             partials = ['persona', 'context','question', 'format']):\n",
     "    keys_tmp = list(j[level_parse][plot_level].keys())\n",
     "    keys = []\n",
     "    for k in keys_tmp:\n",
@@ -111,6 +112,8 @@
     "        keys.append(k)\n",
     "    \n",
     "    keys = np.unique(keys).tolist()\n",
+    "\n",
+    "    dirs_partials = {}\n",
     "    \n",
     "    for k in keys:\n",
     "        v = ''\n",
@@ -132,6 +135,9 @@
     "                que = list(v['Q'].values())[0]\n",
     "            else:\n",
     "                que = v['Q']\n",
+    "            # get other elements\n",
+    "            for p in partials:\n",
+    "                dirs_partials[p] = v[p]\n",
     "        else: # plotX\n",
     "            for kk,vv in v.items():\n",
     "                ans = vv['A']\n",
@@ -141,12 +147,13 @@
     "                        ans = ans_1\n",
     "                        break\n",
     "                    ans = ans_1\n",
-    "            # for kk,vv in v.items():\n",
-    "            #     ans = vv['A']\n",
-    "            #     while type(ans) == type({}):\n",
-    "            #         ans = list(ans.values())[0]\n",
     "                que = vv['Q']\n",
+    "                # get other elements\n",
+    "                for p in partials:\n",
+    "                    dirs_partials[p] = vv[p]\n",
     "        out = {'Q':que, 'A':ans, 'Level':level_parse, 'type':plot_level, 'Response':\"\"}\n",
+    "        for kp,vp in dirs_partials.items():\n",
+    "            out[kp] = vp\n",
     "        # if there is a plot\n",
     "        if 'plot' in list(v.keys())[0]:\n",
     "            out['plot number'] = list(v.keys())[0]\n",
@@ -157,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 64,
    "id": "9f95b5e3",
    "metadata": {},
    "outputs": [],
@@ -198,7 +205,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 73,
+   "id": "86d2d69b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def send_to_chatgpt(question_list, client, image_path, encoded_image,\n",
+    "                    model =\"gpt-4o-mini\", \n",
+    "                    test_run = True, fac=1.0, \n",
+    "                    verbose=True):\n",
+    "    #model=\"gpt-4\",\n",
+    "    #model=\"gpt-4o\",\n",
+    "    #model =\"gpt-4o-mini\",\n",
+    "    #model =\"gpt-3.5-turbo\",\n",
+    "    #model=\"gpt-3.5-turbo-instruct\",\n",
+    "\n",
+    "    # query chatgpt\n",
+    "    #responses = []\n",
+    "\n",
+    "    #try:\n",
+    "    iFac = 1.0\n",
+    "    #for question_list in qa:\n",
+    "    success = False\n",
+    "    iFac = 1\n",
+    "    #['persona', 'context','question', 'format']\n",
+    "    while not success:\n",
+    "        try:\n",
+    "            #question = question_list['Q']\n",
+    "            question = question_list['context'] + \" \" + question_list['question'] + \" \" + question_list['format']\n",
+    "            print('   on question:',question)\n",
+    "            # Prepare the API request\n",
+    "            prompt = f\"I am going to show you an image. Here is the image: [Image: {encoded_image}]. Now, {question}\"\n",
+    "            \n",
+    "            if not test_run:\n",
+    "                # Send the request to the GPT-4o API\n",
+    "                response = client.chat.completions.create(\n",
+    "                    model = model,\n",
+    "                    messages=[\n",
+    "                        {\"role\": \"system\", \"content\": question_list['persona']},\n",
+    "                        {\"role\":\"user\", \"content\": [\n",
+    "                            {\n",
+    "                            \"type\": \"text\",\n",
+    "                            \"text\": prompt\n",
+    "                            },\n",
+    "                            {\n",
+    "                            \"type\": \"image_url\",\n",
+    "                            \"image_url\": {\n",
+    "                                \"url\": f\"data:image/jpeg;base64,{encoded_image}\"\n",
+    "                            }\n",
+    "                            }\n",
+    "                        ]\n",
+    "                        }\n",
+    "                    ]\n",
+    "                )\n",
+    "                success = True\n",
+    "            else:\n",
+    "                success = True\n",
+    "        except Exception as e:\n",
+    "            print(e)\n",
+    "            new_fac = fac/iFac\n",
+    "            print('new fac = ', new_fac)\n",
+    "            encoded_image = load_image(image_path,fac=new_fac)\n",
+    "            iFac += 1\n",
+    "    \n",
+    "    if not test_run:\n",
+    "        # Get the response from the API\n",
+    "        answer = response.choices[0].message.content\n",
+    "        # format answer\n",
+    "        answer_format = answer.replace(\"```json\\n\",'').replace(\"\\n```\",'')\n",
+    "        try:\n",
+    "            question_list['Response'] = json.loads(answer_format)\n",
+    "        except:\n",
+    "            question_list['Response'] = answer_format\n",
+    "            question_list['Error'] = 'JSON formatting'\n",
+    "        question_list['Response String'] = answer_format\n",
+    "        success = True\n",
+    "    else:\n",
+    "        question_list['Response'] = 'TEST RUN'\n",
+    "        question_list['Response String'] = 'TEST RUN'\n",
+    "\n",
+    "    return question_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
    "id": "c6eb280d-d109-4a03-8a76-ea47d5f8960c",
    "metadata": {},
    "outputs": [],
@@ -214,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 71,
    "id": "8957d21b",
    "metadata": {},
    "outputs": [
@@ -226,7 +317,7 @@
        " '/Users/jnaiman/LLM_VQA_JCDL2025/example_hists/jsons/nclust_2_trial0.json']"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 74,
    "id": "7eb0608b",
    "metadata": {},
    "outputs": [
@@ -246,7 +337,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "on 0 of 1\n"
+      "on 0 of 1\n",
+      "   on question:  How many bars are there in the specified figure panel? Please format the output as a json as {\"nbars\":\"\"} for this figure panel, where the \"nbars\" value should be an integer.\n",
+      "   on question:  What are the maximum data values in this figure panel?  Please format the output as a json as {\"maximum x\":\"\"} for this figure panel, where the \"maximum\" value should be a float, calculated from the data values used to create the plot.\n",
+      "   on question:  What are the mean data values in this figure panel?  Please format the output as a json as {\"mean x\":\"\"} for this figure panel, where the \"mean\" value should be a float, calculated from the data values used to create the plot.\n",
+      "   on question:  What are the median data values in this figure panel?  Please format the output as a json as {\"median x\":\"\"} for this figure panel, where the \"median\" value should be a float, calculated from the data values used to create the plot.\n",
+      "   on question:  What are the minimum data values in this figure panel?  Please format the output as a json as {\"minimum x\":\"\"} for this figure panel, where the \"minimum\" value should be a float, calculated from the data values used to create the plot.\n",
+      "   on question:  How many gaussians were used to generate the data for the plot in the figure panel? Please format the output as a json as {\"ngaussians\":\"\"} for this figure panel, where the \"ngaussians\" value should be an integer.\n"
      ]
     },
     {
@@ -307,12 +404,19 @@
     "    plot_level = 'Plot-level questions'\n",
     "    qa = parse_qa(level_parse, plot_level, qa, base_json['VQA'], types)\n",
     "\n",
+    "    responses = []\n",
+    "    for question_list in qa:\n",
+    "        response = send_to_chatgpt(question_list, client, img_path, encoded_image,\n",
+    "                    model =\"gpt-4o-mini\", \n",
+    "                    test_run = True)\n",
+    "        responses.append(response)\n",
+    "\n",
     "    import sys; sys.exit()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 61,
    "id": "96dcbf5d",
    "metadata": {},
    "outputs": [
@@ -324,40 +428,64 @@
        "  'Level': 'Level 1',\n",
        "  'type': 'Plot-level questions',\n",
        "  'Response': '',\n",
+       "  'persona': 'You are a helpful assistant that can analyze images.',\n",
+       "  'context': '',\n",
+       "  'question': 'How many bars are there in the specified figure panel?',\n",
+       "  'format': 'Please format the output as a json as {\"nbars\":\"\"} for this figure panel, where the \"nbars\" value should be an integer.',\n",
        "  'plot number': 'plot0'},\n",
        " {'Q': 'You are a helpful assistant that can analyze images.  What are the maximum data values in this figure panel?  Please format the output as a json as {\"maximum x\":\"\"} for this figure panel, where the \"maximum\" value should be a float, calculated from the data values used to create the plot.',\n",
        "  'A': 0.49755257997301794,\n",
        "  'Level': 'Level 2',\n",
        "  'type': 'Plot-level questions',\n",
        "  'Response': '',\n",
+       "  'persona': 'You are a helpful assistant that can analyze images.',\n",
+       "  'context': '',\n",
+       "  'question': 'What are the maximum data values in this figure panel? ',\n",
+       "  'format': 'Please format the output as a json as {\"maximum x\":\"\"} for this figure panel, where the \"maximum\" value should be a float, calculated from the data values used to create the plot.',\n",
        "  'plot number': 'plot0'},\n",
        " {'Q': 'You are a helpful assistant that can analyze images.  What are the mean data values in this figure panel?  Please format the output as a json as {\"mean x\":\"\"} for this figure panel, where the \"mean\" value should be a float, calculated from the data values used to create the plot.',\n",
        "  'A': 0.34264837991488106,\n",
        "  'Level': 'Level 2',\n",
        "  'type': 'Plot-level questions',\n",
        "  'Response': '',\n",
+       "  'persona': 'You are a helpful assistant that can analyze images.',\n",
+       "  'context': '',\n",
+       "  'question': 'What are the mean data values in this figure panel? ',\n",
+       "  'format': 'Please format the output as a json as {\"mean x\":\"\"} for this figure panel, where the \"mean\" value should be a float, calculated from the data values used to create the plot.',\n",
        "  'plot number': 'plot0'},\n",
        " {'Q': 'You are a helpful assistant that can analyze images.  What are the median data values in this figure panel?  Please format the output as a json as {\"median x\":\"\"} for this figure panel, where the \"median\" value should be a float, calculated from the data values used to create the plot.',\n",
        "  'A': 0.3895267656798662,\n",
        "  'Level': 'Level 2',\n",
        "  'type': 'Plot-level questions',\n",
        "  'Response': '',\n",
+       "  'persona': 'You are a helpful assistant that can analyze images.',\n",
+       "  'context': '',\n",
+       "  'question': 'What are the median data values in this figure panel? ',\n",
+       "  'format': 'Please format the output as a json as {\"median x\":\"\"} for this figure panel, where the \"median\" value should be a float, calculated from the data values used to create the plot.',\n",
        "  'plot number': 'plot0'},\n",
        " {'Q': 'You are a helpful assistant that can analyze images.  What are the minimum data values in this figure panel?  Please format the output as a json as {\"minimum x\":\"\"} for this figure panel, where the \"minimum\" value should be a float, calculated from the data values used to create the plot.',\n",
        "  'A': 0.15863689997095148,\n",
        "  'Level': 'Level 2',\n",
        "  'type': 'Plot-level questions',\n",
        "  'Response': '',\n",
+       "  'persona': 'You are a helpful assistant that can analyze images.',\n",
+       "  'context': '',\n",
+       "  'question': 'What are the minimum data values in this figure panel? ',\n",
+       "  'format': 'Please format the output as a json as {\"minimum x\":\"\"} for this figure panel, where the \"minimum\" value should be a float, calculated from the data values used to create the plot.',\n",
        "  'plot number': 'plot0'},\n",
        " {'Q': 'You are a helpful assistant that can analyze images.  How many gaussians were used to generate the data for the plot in the figure panel? Please format the output as a json as {\"ngaussians\":\"\"} for this figure panel, where the \"ngaussians\" value should be an integer.',\n",
        "  'A': 3,\n",
        "  'Level': 'Level 3',\n",
        "  'type': 'Plot-level questions',\n",
        "  'Response': '',\n",
+       "  'persona': 'You are a helpful assistant that can analyze images.',\n",
+       "  'context': '',\n",
+       "  'question': 'How many gaussians were used to generate the data for the plot in the figure panel?',\n",
+       "  'format': 'Please format the output as a json as {\"ngaussians\":\"\"} for this figure panel, where the \"ngaussians\" value should be an integer.',\n",
        "  'plot number': 'plot0'}]"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
