--- a/chatgpt/chat_gpt.ipynb
+++ b/chatgpt/chat_gpt.ipynb
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 86,
    "id": "86d2d69b",
    "metadata": {},
    "outputs": [],
@@ -233,9 +233,14 @@
     "        try:\n",
     "            #question = question_list['Q']\n",
     "            question = question_list['context'] + \" \" + question_list['question'] + \" \" + question_list['format']\n",
+    "            # lowercase the first word, just in case\n",
+    "            question = question.lstrip() # no whitespace\n",
+    "            question = question[0].lower() + question[1:]\n",
     "            print('   on question:',question)\n",
     "            # Prepare the API request\n",
     "            prompt = f\"I am going to show you an image. Here is the image: [Image: {encoded_image}]. Now, {question}\"\n",
+    "            prompt_save = f\"I am going to show you an image. Here is the image: [Image: <ENCODED IMAGE>]. Now, {question}\"\n",
+    "            ##question_list['prompt'] = prompt\n",
     "            \n",
     "            if not test_run:\n",
     "                # Send the request to the GPT-4o API\n",
@@ -284,12 +289,12 @@
     "        question_list['Response'] = 'TEST RUN'\n",
     "        question_list['Response String'] = 'TEST RUN'\n",
     "\n",
-    "    return question_list"
+    "    return question_list, prompt_save"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 82,
    "id": "c6eb280d-d109-4a03-8a76-ea47d5f8960c",
    "metadata": {},
    "outputs": [],
@@ -305,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 83,
    "id": "8957d21b",
    "metadata": {},
    "outputs": [
@@ -317,7 +322,7 @@
        " '/Users/jnaiman/LLM_VQA_JCDL2025/example_hists/jsons/nclust_2_trial0.json']"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 87,
    "id": "7eb0608b",
    "metadata": {},
    "outputs": [
@@ -338,12 +343,12 @@
      "output_type": "stream",
      "text": [
       "on 0 of 1\n",
-      "   on question:  How many bars are there in the specified figure panel? Please format the output as a json as {\"nbars\":\"\"} for this figure panel, where the \"nbars\" value should be an integer.\n",
-      "   on question:  What are the maximum data values in this figure panel?  Please format the output as a json as {\"maximum x\":\"\"} for this figure panel, where the \"maximum\" value should be a float, calculated from the data values used to create the plot.\n",
-      "   on question:  What are the mean data values in this figure panel?  Please format the output as a json as {\"mean x\":\"\"} for this figure panel, where the \"mean\" value should be a float, calculated from the data values used to create the plot.\n",
-      "   on question:  What are the median data values in this figure panel?  Please format the output as a json as {\"median x\":\"\"} for this figure panel, where the \"median\" value should be a float, calculated from the data values used to create the plot.\n",
-      "   on question:  What are the minimum data values in this figure panel?  Please format the output as a json as {\"minimum x\":\"\"} for this figure panel, where the \"minimum\" value should be a float, calculated from the data values used to create the plot.\n",
-      "   on question:  How many gaussians were used to generate the data for the plot in the figure panel? Please format the output as a json as {\"ngaussians\":\"\"} for this figure panel, where the \"ngaussians\" value should be an integer.\n"
+      "   on question: how many bars are there in the specified figure panel? Please format the output as a json as {\"nbars\":\"\"} for this figure panel, where the \"nbars\" value should be an integer.\n",
+      "   on question: what are the maximum data values in this figure panel?  Please format the output as a json as {\"maximum x\":\"\"} for this figure panel, where the \"maximum\" value should be a float, calculated from the data values used to create the plot.\n",
+      "   on question: what are the mean data values in this figure panel?  Please format the output as a json as {\"mean x\":\"\"} for this figure panel, where the \"mean\" value should be a float, calculated from the data values used to create the plot.\n",
+      "   on question: what are the median data values in this figure panel?  Please format the output as a json as {\"median x\":\"\"} for this figure panel, where the \"median\" value should be a float, calculated from the data values used to create the plot.\n",
+      "   on question: what are the minimum data values in this figure panel?  Please format the output as a json as {\"minimum x\":\"\"} for this figure panel, where the \"minimum\" value should be a float, calculated from the data values used to create the plot.\n",
+      "   on question: how many gaussians were used to generate the data for the plot in the figure panel? Please format the output as a json as {\"ngaussians\":\"\"} for this figure panel, where the \"ngaussians\" value should be an integer.\n"
      ]
     },
     {
@@ -406,101 +411,46 @@
     "\n",
     "    responses = []\n",
     "    for question_list in qa:\n",
-    "        response = send_to_chatgpt(question_list, client, img_path, encoded_image,\n",
+    "        response, prompt = send_to_chatgpt(question_list, client, img_path, encoded_image,\n",
     "                    model =\"gpt-4o-mini\", \n",
     "                    test_run = True)\n",
     "        responses.append(response)\n",
+    "        question_list['prompt'] = prompt\n",
     "\n",
     "    import sys; sys.exit()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 88,
    "id": "96dcbf5d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'Q': 'You are a helpful assistant that can analyze images.  How many bars are there in the specified figure panel? Please format the output as a json as {\"nbars\":\"\"} for this figure panel, where the \"nbars\" value should be an integer.',\n",
-       "  'A': 50,\n",
-       "  'Level': 'Level 1',\n",
-       "  'type': 'Plot-level questions',\n",
-       "  'Response': '',\n",
-       "  'persona': 'You are a helpful assistant that can analyze images.',\n",
-       "  'context': '',\n",
-       "  'question': 'How many bars are there in the specified figure panel?',\n",
-       "  'format': 'Please format the output as a json as {\"nbars\":\"\"} for this figure panel, where the \"nbars\" value should be an integer.',\n",
-       "  'plot number': 'plot0'},\n",
-       " {'Q': 'You are a helpful assistant that can analyze images.  What are the maximum data values in this figure panel?  Please format the output as a json as {\"maximum x\":\"\"} for this figure panel, where the \"maximum\" value should be a float, calculated from the data values used to create the plot.',\n",
-       "  'A': 0.49755257997301794,\n",
-       "  'Level': 'Level 2',\n",
-       "  'type': 'Plot-level questions',\n",
-       "  'Response': '',\n",
-       "  'persona': 'You are a helpful assistant that can analyze images.',\n",
-       "  'context': '',\n",
-       "  'question': 'What are the maximum data values in this figure panel? ',\n",
-       "  'format': 'Please format the output as a json as {\"maximum x\":\"\"} for this figure panel, where the \"maximum\" value should be a float, calculated from the data values used to create the plot.',\n",
-       "  'plot number': 'plot0'},\n",
-       " {'Q': 'You are a helpful assistant that can analyze images.  What are the mean data values in this figure panel?  Please format the output as a json as {\"mean x\":\"\"} for this figure panel, where the \"mean\" value should be a float, calculated from the data values used to create the plot.',\n",
-       "  'A': 0.34264837991488106,\n",
-       "  'Level': 'Level 2',\n",
-       "  'type': 'Plot-level questions',\n",
-       "  'Response': '',\n",
-       "  'persona': 'You are a helpful assistant that can analyze images.',\n",
-       "  'context': '',\n",
-       "  'question': 'What are the mean data values in this figure panel? ',\n",
-       "  'format': 'Please format the output as a json as {\"mean x\":\"\"} for this figure panel, where the \"mean\" value should be a float, calculated from the data values used to create the plot.',\n",
-       "  'plot number': 'plot0'},\n",
-       " {'Q': 'You are a helpful assistant that can analyze images.  What are the median data values in this figure panel?  Please format the output as a json as {\"median x\":\"\"} for this figure panel, where the \"median\" value should be a float, calculated from the data values used to create the plot.',\n",
-       "  'A': 0.3895267656798662,\n",
-       "  'Level': 'Level 2',\n",
-       "  'type': 'Plot-level questions',\n",
-       "  'Response': '',\n",
-       "  'persona': 'You are a helpful assistant that can analyze images.',\n",
-       "  'context': '',\n",
-       "  'question': 'What are the median data values in this figure panel? ',\n",
-       "  'format': 'Please format the output as a json as {\"median x\":\"\"} for this figure panel, where the \"median\" value should be a float, calculated from the data values used to create the plot.',\n",
-       "  'plot number': 'plot0'},\n",
-       " {'Q': 'You are a helpful assistant that can analyze images.  What are the minimum data values in this figure panel?  Please format the output as a json as {\"minimum x\":\"\"} for this figure panel, where the \"minimum\" value should be a float, calculated from the data values used to create the plot.',\n",
-       "  'A': 0.15863689997095148,\n",
-       "  'Level': 'Level 2',\n",
-       "  'type': 'Plot-level questions',\n",
-       "  'Response': '',\n",
-       "  'persona': 'You are a helpful assistant that can analyze images.',\n",
-       "  'context': '',\n",
-       "  'question': 'What are the minimum data values in this figure panel? ',\n",
-       "  'format': 'Please format the output as a json as {\"minimum x\":\"\"} for this figure panel, where the \"minimum\" value should be a float, calculated from the data values used to create the plot.',\n",
-       "  'plot number': 'plot0'},\n",
-       " {'Q': 'You are a helpful assistant that can analyze images.  How many gaussians were used to generate the data for the plot in the figure panel? Please format the output as a json as {\"ngaussians\":\"\"} for this figure panel, where the \"ngaussians\" value should be an integer.',\n",
-       "  'A': 3,\n",
-       "  'Level': 'Level 3',\n",
-       "  'type': 'Plot-level questions',\n",
-       "  'Response': '',\n",
-       "  'persona': 'You are a helpful assistant that can analyze images.',\n",
-       "  'context': '',\n",
-       "  'question': 'How many gaussians were used to generate the data for the plot in the figure panel?',\n",
-       "  'format': 'Please format the output as a json as {\"ngaussians\":\"\"} for this figure panel, where the \"ngaussians\" value should be an integer.',\n",
-       "  'plot number': 'plot0'}]"
+       "{'Q': 'You are a helpful assistant that can analyze images.  How many bars are there in the specified figure panel? Please format the output as a json as {\"nbars\":\"\"} for this figure panel, where the \"nbars\" value should be an integer.',\n",
+       " 'A': 50,\n",
+       " 'Level': 'Level 1',\n",
+       " 'type': 'Plot-level questions',\n",
+       " 'Response': 'TEST RUN',\n",
+       " 'persona': 'You are a helpful assistant that can analyze images.',\n",
+       " 'context': '',\n",
+       " 'question': 'How many bars are there in the specified figure panel?',\n",
+       " 'format': 'Please format the output as a json as {\"nbars\":\"\"} for this figure panel, where the \"nbars\" value should be an integer.',\n",
+       " 'plot number': 'plot0',\n",
+       " 'Response String': 'TEST RUN',\n",
+       " 'prompt': 'I am going to show you an image. Here is the image: [Image: <ENCODED IMAGE>]. Now, how many bars are there in the specified figure panel? Please format the output as a json as {\"nbars\":\"\"} for this figure panel, where the \"nbars\" value should be an integer.'}"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "qa"
+    "qa[0]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "27776ae9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
