parsing of errors

--- a/chatgpt/chat_gpt.ipynb
+++ b/chatgpt/chat_gpt.ipynb
@@ -294,6 +294,53 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "b3cc147f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def parse_for_errors(qa, verbose=True):\n",
+    "    # try to fix\n",
+    "    for level in qa:\n",
+    "        noErr = False\n",
+    "        if 'Error' in level:\n",
+    "            noErr = True\n",
+    "            try:\n",
+    "                iters = []\n",
+    "                for x in re.finditer(r'//(\\s*)(.*)(\\s*)\\n', level['Response']):\n",
+    "                    #print(x)\n",
+    "                    iters.append(level['Response'][x.span()[0]:x.span()[1]])\n",
+    "                \n",
+    "                response = level['Response']\n",
+    "                for i in iters:\n",
+    "                    response = response.replace(i,'')\n",
+    "                level['Response'] = response\n",
+    "                del level['Error']\n",
+    "            except:\n",
+    "                noErr = False\n",
+    "                print('********')\n",
+    "                print('couldnt fix:', level['Response'])\n",
+    "                print('********')\n",
+    "                pass\n",
+    "    \n",
+    "        try:\n",
+    "            if type(level['Response']) != type({}):\n",
+    "                level['Response'] = json.loads(level['Response'])\n",
+    "        except:\n",
+    "            pass\n",
+    "    \n",
+    "        if not noErr and verbose:\n",
+    "            print('Q:', level['Q'])\n",
+    "            print('ChatGPT A:', level['Response'])\n",
+    "            print('Real A:   ', level['A'])\n",
+    "            print('')\n",
+    "            #if 'Error' in level:\n",
+    "            #    import sys; sys.exit()\n",
+    "    return qa"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 82,
    "id": "c6eb280d-d109-4a03-8a76-ea47d5f8960c",
    "metadata": {},
