--- a/chatgpt/chat_gpt.ipynb
+++ b/chatgpt/chat_gpt.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 89,
    "id": "017cce17-f4e8-4df6-a3b5-2edef3714601",
    "metadata": {},
    "outputs": [],
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 90,
    "id": "a2cf577c-4a80-4fbf-b4a0-8a0a61d16b61",
    "metadata": {},
    "outputs": [],
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 91,
    "id": "9fc26f67-1869-44f7-97bb-238b2c5a42b1",
    "metadata": {},
    "outputs": [],
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 92,
    "id": "fe835962-2db1-4c56-bdf4-50708fedaad7",
    "metadata": {},
    "outputs": [],
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 118,
    "id": "9f95b5e3",
    "metadata": {},
    "outputs": [],
@@ -184,7 +184,7 @@
     "    #print('on', iFile, 'of', iMax)\n",
     "    err = False\n",
     "    base_file = json_path.split('/')[-1].removesuffix('.json')\n",
-    "    if os.path.exists(dir_api + base_file + '.pickle'):\n",
+    "    if os.path.exists(dir_api + base_file + '.pickle') and not restart:\n",
     "        if verbose: print('have file already:', dir_api + base_file + '.pickle')\n",
     "        return '','', True\n",
     "    # do we have it?\n",
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 103,
    "id": "86d2d69b",
    "metadata": {},
    "outputs": [],
@@ -236,7 +236,7 @@
     "            # lowercase the first word, just in case\n",
     "            question = question.lstrip() # no whitespace\n",
     "            question = question[0].lower() + question[1:]\n",
-    "            print('   on question:',question)\n",
+    "            if verbose: print('   on question:',question)\n",
     "            # Prepare the API request\n",
     "            prompt = f\"I am going to show you an image. Here is the image: [Image: {encoded_image}]. Now, {question}\"\n",
     "            prompt_save = f\"I am going to show you an image. Here is the image: [Image: <ENCODED IMAGE>]. Now, {question}\"\n",
@@ -294,12 +294,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 99,
    "id": "b3cc147f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def parse_for_errors(qa, verbose=True):\n",
+    "def parse_for_errors(qa, verbose=True, print_what = 'prompt'):\n",
+    "    \"\"\"\n",
+    "    print_what : set to \"prompt\" to print full prompt, or \"question\" for just the question\n",
+    "    \"\"\"\n",
     "    # try to fix\n",
     "    for level in qa:\n",
     "        noErr = False\n",
@@ -332,7 +335,10 @@
     "        if not noErr and verbose:\n",
     "            print('Q:', level['Q'])\n",
     "            print('ChatGPT A:', level['Response'])\n",
-    "            print('Real A:   ', level['A'])\n",
+    "            if print_what == 'question':\n",
+    "                print('Real A:   ', level['A'])\n",
+    "            elif print_what == 'prompt':\n",
+    "                print('Real A:   ', level['prompt'])\n",
     "            print('')\n",
     "            #if 'Error' in level:\n",
     "            #    import sys; sys.exit()\n",
@@ -341,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 100,
    "id": "c6eb280d-d109-4a03-8a76-ea47d5f8960c",
    "metadata": {},
    "outputs": [],
@@ -357,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 101,
    "id": "8957d21b",
    "metadata": {},
    "outputs": [
@@ -369,7 +375,7 @@
        " '/Users/jnaiman/LLM_VQA_JCDL2025/example_hists/jsons/nclust_2_trial0.json']"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -381,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 119,
    "id": "7eb0608b",
    "metadata": {},
    "outputs": [
@@ -390,48 +396,31 @@
      "output_type": "stream",
      "text": [
       "on 0 of 1\n",
-      "   on question: how many bars are there in the specified figure panel? Please format the output as a json as {\"nbars\":\"\"} for this figure panel, where the \"nbars\" value should be an integer.\n",
-      "   on question: what are the maximum data values in this figure panel?  Please format the output as a json as {\"maximum x\":\"\"} for this figure panel, where the \"maximum\" value should be a float, calculated from the data values used to create the plot.\n",
-      "   on question: what are the mean data values in this figure panel?  Please format the output as a json as {\"mean x\":\"\"} for this figure panel, where the \"mean\" value should be a float, calculated from the data values used to create the plot.\n",
-      "   on question: what are the median data values in this figure panel?  Please format the output as a json as {\"median x\":\"\"} for this figure panel, where the \"median\" value should be a float, calculated from the data values used to create the plot.\n",
-      "   on question: what are the minimum data values in this figure panel?  Please format the output as a json as {\"minimum x\":\"\"} for this figure panel, where the \"minimum\" value should be a float, calculated from the data values used to create the plot.\n",
-      "   on question: how many gaussians were used to generate the data for the plot in the figure panel? Please format the output as a json as {\"ngaussians\":\"\"} for this figure panel, where the \"ngaussians\" value should be an integer.\n"
-     ]
-    },
-    {
-     "ename": "SystemExit",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "An exception has occurred, use %tb to see the full traceback.\n",
-      "\u001b[31mSystemExit\u001b[39m\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/anaconda3/envs/JCDL2025/lib/python3.12/site-packages/IPython/core/interactiveshell.py:3707: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
-      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
+      "have file already: /Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api/nclust_3_trial9.pickle\n"
      ]
     }
    ],
    "source": [
-    "iFile = 0\n",
     "iMax = 1\n",
     "verbose = False\n",
-    "test_run = True # run w/o actually pinging openai\n",
+    "test_run = False # run w/o actually pinging openai\n",
+    "restart = False\n",
     "\n",
     "fac = 0.5\n",
     "for ijson,json_path in enumerate(jsons_to_parse):\n",
-    "    if ijson > iMax:\n",
+    "    if ijson >= iMax:\n",
     "        continue\n",
     "\n",
-    "    print('on', iFile, 'of', iMax)\n",
+    "    print('on', ijson, 'of', iMax)\n",
     "\n",
     "    # get image and base json\n",
     "    img_path = imgs_dir + json_path.split('/')[-1].removesuffix('.json') + '.' + img_format\n",
-    "    encoded_image, base_json, err = get_img_json_pair(img_path, json_path, dir_api, fac=fac)\n",
+    "    encoded_image, base_json, err = get_img_json_pair(img_path, json_path, dir_api, \n",
+    "                                                      fac=fac, restart=restart)\n",
+    "\n",
+    "    if err:\n",
+    "        continue\n",
+    "\n",
     "\n",
     "    ###### create QA ########\n",
     "    qa = []\n",
@@ -464,39 +453,36 @@
     "        responses.append(response)\n",
     "        question_list['prompt'] = prompt\n",
     "\n",
-    "    import sys; sys.exit()"
+    "    # parse for errors\n",
+    "    qa = parse_for_errors(qa)\n",
+    "\n",
+    "    # dump to file\n",
+    "    if not test_run:\n",
+    "        with open(dir_api + json_path.split('/')[-1].removesuffix('.json')+ '.pickle', 'wb') as ff:\n",
+    "            pickle.dump([qa], ff)\n",
+    "    else:\n",
+    "        print('Would store at:', dir_api + json_path.split('/')[-1].removesuffix('.json')+ '.pickle')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 108,
    "id": "96dcbf5d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'Q': 'You are a helpful assistant that can analyze images.  How many bars are there in the specified figure panel? Please format the output as a json as {\"nbars\":\"\"} for this figure panel, where the \"nbars\" value should be an integer.',\n",
-       " 'A': 50,\n",
-       " 'Level': 'Level 1',\n",
-       " 'type': 'Plot-level questions',\n",
-       " 'Response': 'TEST RUN',\n",
-       " 'persona': 'You are a helpful assistant that can analyze images.',\n",
-       " 'context': '',\n",
-       " 'question': 'How many bars are there in the specified figure panel?',\n",
-       " 'format': 'Please format the output as a json as {\"nbars\":\"\"} for this figure panel, where the \"nbars\" value should be an integer.',\n",
-       " 'plot number': 'plot0',\n",
-       " 'Response String': 'TEST RUN',\n",
-       " 'prompt': 'I am going to show you an image. Here is the image: [Image: <ENCODED IMAGE>]. Now, how many bars are there in the specified figure panel? Please format the output as a json as {\"nbars\":\"\"} for this figure panel, where the \"nbars\" value should be an integer.'}"
+       "''"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "qa[0]"
+    "base_json"
    ]
   },
   {
