--- a/chatgpt/parse_chat_gpt_pickles.ipynb
+++ b/chatgpt/parse_chat_gpt_pickles.ipynb
@@ -2,20 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "id": "f55fd9f4-0a1d-4ff6-ab72-acc38ddb46e0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dir_api = '/Users/jnaiman/Dropbox/JCDL2024/paper_submission/chatgpt_api/'\n",
+    "dir_api = '/Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api/' #store API results for example-hists\n",
     "\n",
     "# where to save jsons\n",
-    "dir_api_jsons = '/Users/jnaiman/Dropbox/JCDL2024/paper_submission/chatgpt_api_jsons/'"
+    "dir_api_jsons = '/Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api_jsons/' # example hists"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 2,
    "id": "2b70e783-3610-43d9-924c-9f196d61a861",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "id": "172ad4cf-0749-44df-95a4-4fdf30d8272a",
    "metadata": {},
    "outputs": [],
@@ -39,22 +39,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "id": "6a4308a1-6eea-426a-831b-b100916fda50",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(['/Users/jnaiman/Dropbox/JCDL2024/paper_submission/chatgpt_api/Picture182.pickle',\n",
-       "  '/Users/jnaiman/Dropbox/JCDL2024/paper_submission/chatgpt_api/Picture72.pickle',\n",
-       "  '/Users/jnaiman/Dropbox/JCDL2024/paper_submission/chatgpt_api/Picture60.pickle',\n",
-       "  '/Users/jnaiman/Dropbox/JCDL2024/paper_submission/chatgpt_api/Picture1.pickle',\n",
-       "  '/Users/jnaiman/Dropbox/JCDL2024/paper_submission/chatgpt_api/Picture35.pickle'],\n",
-       " 107)"
+       "(['/Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api/nclust_5_trial3.pickle',\n",
+       "  '/Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api/nclust_3_trial9.pickle'],\n",
+       " 2)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -65,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 5,
    "id": "ee8ff505-9244-4314-b704-cf403c7ca70b",
    "metadata": {},
    "outputs": [],
@@ -81,18 +78,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": null,
+   "id": "fe70ba6c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7c349762",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e6c86c27",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "87ec42a2-68f6-417e-b957-9c824f7a41a0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "known_files = ['/Users/jnaiman/Dropbox/JCDL2024/paper_submission/chatgpt_api_jsons/Picture169.json']\n",
-    "known_qs = ['What are the data values in this figure? You are a helpful assistant, please format the output as a json as {\"x\":[], \"y\":[], \"colors\":[]} where the values of \"x\", \"y\", and \"colors\" are the data values used to create the plot and are in the format of a list of floats.  ']\n"
+    "#known_files = ['/Users/jnaiman/Dropbox/JCDL2024/paper_submission/chatgpt_api_jsons/Picture169.json']\n",
+    "#known_qs = ['What are the data values in this figure? You are a helpful assistant, please format the output as a json as {\"x\":[], \"y\":[], \"colors\":[]} where the values of \"x\", \"y\", and \"colors\" are the data values used to create the plot and are in the format of a list of floats.  ']\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 7,
    "id": "91855943-8988-43d2-99ad-e938fca771a6",
    "metadata": {},
    "outputs": [],
@@ -8725,7 +8746,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "JCDL2025",
    "language": "python",
    "name": "python3"
   },
@@ -8739,7 +8760,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
