--- a/chatgpt/chat_gpt.ipynb
+++ b/chatgpt/chat_gpt.ipynb
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 122,
    "id": "b3cc147f",
    "metadata": {},
    "outputs": [],
@@ -333,12 +333,13 @@
     "            pass\n",
     "    \n",
     "        if not noErr and verbose:\n",
-    "            print('Q:', level['Q'])\n",
-    "            print('ChatGPT A:', level['Response'])\n",
     "            if print_what == 'question':\n",
-    "                print('Real A:   ', level['A'])\n",
+    "                print('Q:', level['Q'])\n",
     "            elif print_what == 'prompt':\n",
-    "                print('Real A:   ', level['prompt'])\n",
+    "                print('Q:', level['prompt'])\n",
+    "            print('ChatGPT A:', level['Response'])\n",
+    "            print('Real A:   ', level['A'])\n",
+    "\n",
     "            print('')\n",
     "            #if 'Error' in level:\n",
     "            #    import sys; sys.exit()\n",
@@ -387,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 121,
    "id": "7eb0608b",
    "metadata": {},
    "outputs": [
@@ -396,7 +397,28 @@
      "output_type": "stream",
      "text": [
       "on 0 of 1\n",
-      "have file already: /Users/jnaiman/LLM_VQA_JCDL2025/example_hists/LLM_outputs/chatgpt_api/nclust_3_trial9.pickle\n"
+      "   on question: how many bars are there in the specified figure panel? Please format the output as a json as {\"nbars\":\"\"} for this figure panel, where the \"nbars\" value should be an integer.\n",
+      "   on question: what are the maximum data values in this figure panel?  Please format the output as a json as {\"maximum x\":\"\"} for this figure panel, where the \"maximum\" value should be a float, calculated from the data values used to create the plot.\n",
+      "   on question: what are the mean data values in this figure panel?  Please format the output as a json as {\"mean x\":\"\"} for this figure panel, where the \"mean\" value should be a float, calculated from the data values used to create the plot.\n",
+      "   on question: what are the median data values in this figure panel?  Please format the output as a json as {\"median x\":\"\"} for this figure panel, where the \"median\" value should be a float, calculated from the data values used to create the plot.\n",
+      "   on question: what are the minimum data values in this figure panel?  Please format the output as a json as {\"minimum x\":\"\"} for this figure panel, where the \"minimum\" value should be a float, calculated from the data values used to create the plot.\n",
+      "   on question: how many gaussians were used to generate the data for the plot in the figure panel? Please format the output as a json as {\"ngaussians\":\"\"} for this figure panel, where the \"ngaussians\" value should be an integer.\n",
+      "Q: You are a helpful assistant that can analyze images.  How many bars are there in the specified figure panel? Please format the output as a json as {\"nbars\":\"\"} for this figure panel, where the \"nbars\" value should be an integer.\n",
+      "ChatGPT A: {'nbars': 20}\n",
+      "Real A:    I am going to show you an image. Here is the image: [Image: <ENCODED IMAGE>]. Now, how many bars are there in the specified figure panel? Please format the output as a json as {\"nbars\":\"\"} for this figure panel, where the \"nbars\" value should be an integer.\n",
+      "\n",
+      "Q: You are a helpful assistant that can analyze images.  What are the maximum data values in this figure panel?  Please format the output as a json as {\"maximum x\":\"\"} for this figure panel, where the \"maximum\" value should be a float, calculated from the data values used to create the plot.\n",
+      "ChatGPT A: {'maximum x': '0.4'}\n",
+      "Real A:    I am going to show you an image. Here is the image: [Image: <ENCODED IMAGE>]. Now, what are the maximum data values in this figure panel?  Please format the output as a json as {\"maximum x\":\"\"} for this figure panel, where the \"maximum\" value should be a float, calculated from the data values used to create the plot.\n",
+      "\n",
+      "Q: You are a helpful assistant that can analyze images.  What are the minimum data values in this figure panel?  Please format the output as a json as {\"minimum x\":\"\"} for this figure panel, where the \"minimum\" value should be a float, calculated from the data values used to create the plot.\n",
+      "ChatGPT A: {'minimum x': 0.2}\n",
+      "Real A:    I am going to show you an image. Here is the image: [Image: <ENCODED IMAGE>]. Now, what are the minimum data values in this figure panel?  Please format the output as a json as {\"minimum x\":\"\"} for this figure panel, where the \"minimum\" value should be a float, calculated from the data values used to create the plot.\n",
+      "\n",
+      "Q: You are a helpful assistant that can analyze images.  How many gaussians were used to generate the data for the plot in the figure panel? Please format the output as a json as {\"ngaussians\":\"\"} for this figure panel, where the \"ngaussians\" value should be an integer.\n",
+      "ChatGPT A: {'ngaussians': '4'}\n",
+      "Real A:    I am going to show you an image. Here is the image: [Image: <ENCODED IMAGE>]. Now, how many gaussians were used to generate the data for the plot in the figure panel? Please format the output as a json as {\"ngaussians\":\"\"} for this figure panel, where the \"ngaussians\" value should be an integer.\n",
+      "\n"
      ]
     }
    ],
@@ -449,7 +471,7 @@
     "    for question_list in qa:\n",
     "        response, prompt = send_to_chatgpt(question_list, client, img_path, encoded_image,\n",
     "                    model =\"gpt-4o-mini\", \n",
-    "                    test_run = True)\n",
+    "                    test_run = test_run)\n",
     "        responses.append(response)\n",
     "        question_list['prompt'] = prompt\n",
     "\n",
